feat: rfqj-cli init

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "wxminiapp-docs:dev": "vuepress dev wxminiapp-docs",
     "wxminiapp-docs:build": "vuepress build wxminiapp-docs",
     "hm-helper-docs:dev": "vuepress dev hm-helper-docs",
-    "hm-helper-docs:build": "vuepress build hm-helper-docs"
+    "hm-helper-docs:build": "vuepress build hm-helper-docs",
+    "rfqj-cli-docs:dev": "vuepress dev rfqj-cli-docs",
+    "rfqj-cli-docs:build": "vuepress build rfqj-cli-docs"
   },
   "repository": {
     "type": "git",
